Bug 386286. Firefox.exe process running after exit, stuck in ::OleUninitialize() in OleRegisterMgr::~OleRegisterMgr(). Major work to track down the problem by Marco Zehe. r=emaijala, sr=neil, a=beltzner